--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,4 @@
 <div class="publications">
-  <h2>Selected publications</h2>
+  <h2>Selected outputs</h2>
   {% bibliography -f selected -q @*[selected=true]* %}
 </div>
