--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -448,3 +448,9 @@ html.transition *:after {
   transition: all 750ms !important;
   transition-delay: 0 !important;
 }
+
+// Plotly
+
+.modebar{
+  display: none !important;
+}
