--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -454,3 +454,21 @@ html.transition *:after {
 .modebar{
   display: none !important;
 }
+
+//calendar div
+
+.calendar-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+}
+
+.calendar-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
