--- a/_layouts/contributor.html
+++ b/_layouts/contributor.html
@@ -5,7 +5,11 @@ layout: default
 
   <header class="post-header">
     {% if page.img %}
-        <img src="{{ page.img | relative_url }}" alt="contributor thumbnail">
+          <div class="row">
+            <div class="col-sm mt-3 mt-md-0">
+                <img class="img-fluid rounded z-depth-1" src="{{ page.img | relative_url }}" alt="contributor thumbnail" width="300">
+            </div>
+        </div>
     {% endif %}
     <h1 class="post-title">{{ page.name }}</h1>
     <h5 class="post-title">{{ page.affiliation }}</h5>
