--- a/_layouts/contributor.html
+++ b/_layouts/contributor.html
@@ -16,42 +16,42 @@ layout: default
     <p class="post-description">{{ page.minibio }}</p>
     <div class="row ml-0 mr-0 mt-0 p-0">
       {% if page.mail %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="Email">
           <a href="mailto:{{ page.mail | encode_email }}"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
       {% endif %}
       {% if page.website %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="Website">
           <a href="{{ page.website }}" target="_blank"><i class="fas fa-globe"></i></a>
         </div>
       </div>
       {% endif %}
       {% if page.twitter %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="Twitter">
           <a href="{{ page.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
       {% endif %}
       {% if page.linkedin %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="LinkedIn">
           <a href="{{ page.linkedin }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
       {% endif %}
       {% if page.googlescholar %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="Google Scholar">
           <a href="{{ page.googlescholar }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
         </div>
       </div>
       {% endif %}
       {% if page.github %}
-      <div class="col-sm-2">
+      <div class="col-md-4 col-2">
         <div class="icon" data-toggle="tooltip" title="Code Repository">
           <a href="{{ page.github }}" target="_blank"><i class="fab fa-github gh-icon"></i></a>
         </div>
