--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -14,37 +14,7 @@
 
   <d-front-matter>
     <script async type="text/json">{
-      "title": "{{ page.title }}",
-      "description": "{{ page.description }}",
-      "published": "{{ page.date }}",
-      "authors": [
-        {% for author in page.authors %}
-        {
-          "author": "{{ author.name }}",
-          "authorURL": "{{ author.url }}",
-          "affiliations": [
-            {
-              "name": "{{ author.affiliations.name }}",
-              "url": "{{ author.affiliations.url }}"
-            }
-          ]
-        }{% if forloop.last == false %},{% endif %}
-        {% endfor %}
-      ],
-      "katex": {
-        "delimiters": [
-          {
-            "left": "$",
-            "right": "$",
-            "display": false
-          },
-          {
-            "left": "$$",
-            "right": "$$",
-            "display": true
-          }
-        ]
-      }
+      "title": "{{ page.title }}"
     }</script>
   </d-front-matter>
 
