--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,5 @@
 <span class="contact-icon text-center">
-  {%- if site.discord_id -%}<a href="https://discord.com/users/{{ site.discord_id }}" title="Discord"><i class="fab fa-discord"></i></a>{% endif %}
+  {%- if site.discord_id -%}<a href="{{ site.discord_id }}" title="Discord"><i class="fab fa-discord"></i></a>{% endif %}
   {%- if site.email -%}<a href="mailto:{{ site.email | encode_email }}"><i class="fas fa-envelope"></i></a>{% endif %}
   {% if site.orcid_id %}<a href="https://orcid.org/{{ site.orcid_id }}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>{% endif %}
   {% if site.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ site.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>{% endif %}
